Edited html in shop.html in accordance with BEM methodology

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<a class="promo-block__button btn">Хочу варенье!</a>
 			</section>
 		</div>
-		<section class="products-list">
+		<section class="products">
 			<article class="product">
 				<span class="product__label">Хит</span>
 				<div class="product__image-block">
